--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+default:
+  tags: []
+
 stages:
   - prepare
   - build
@@ -10,10 +13,8 @@ prepare:
     - echo "Prepare stage completed successfully"
 
 build:
-  state: build
+  stage: build
   script:
     - echo "Try build"
     - sleep 10
-    - echo "build done"   
-
-
+    - echo "build done"
