Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,16 @@ stages:
   - build
 prepare:
   stage: prepare
+  tags:
+    - larry
   script:        
     - echo "Configuring Git credentials..."
     - echo "https://${GIT_USERNAME}:${PERSONAL_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
     - echo "Prepare stage completed successfully"
 build:
   stage: build
+  tags:
+    - larry
   script:
     - echo "Try build"
     - sleep 10
