--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,14 @@ prepare:
     - echo "Configuring Git credentials..."
     - echo "https://${GIT_USERNAME}:${PERSONAL_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
     - echo "Prepare stage completed successfully"
+  tags:
+    - vps
 build:
   stage: build
   script:
     - echo "Try build"
     - sleep 10
     - echo "build done"   
+  tags:
+    - vps
     
