--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ prepare:
     - echo "https://${GIT_USERNAME}:${PERSONAL_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
     - echo "Prepare stage completed successfully"
   tags:
-    - larry
+    - cicd
 build:
   stage: build
   image: docker:latest
