--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,56 @@
 stages:
   - prepare
+  - test
   - build
+
+variables:
+  TARGET_BRANCH: "CICD_2"
+  # Docker configuration - disable TLS globally
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+  DOCKER_HOST: tcp://docker:2375
+  
+  # Package Registry configuration
+  IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
+  
+  # Git configuration
+  GIT_STRATEGY: none
+  GIT_USERNAME: "fsa_HongTL"
+
+# Default configuration for all jobs
+default:
+  image: mcr.microsoft.com/dotnet/sdk:8.0
+
 prepare:
   stage: prepare
-  script:        
+  image: alpine:latest
+  rules:
+    - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
+  script:
+    - apk add --no-cache git curl jq
+    # Configure Git authentication with personal token
     - echo "Configuring Git credentials..."
-    - echo "https://${GIT_USERNAME}:${PERSONAL_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
+    - git config --global credential.helper store
+    - echo "https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
+    - git config --global user.name "$GIT_USERNAME"
+    - git config --global user.email "$GIT_USERNAME@users.noreply.gitlab.com"
+    - echo "Testing Git authentication..."
+    - git ls-remote "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" || echo "Authentication test failed, but continuing"
     - echo "Prepare stage completed successfully"
   tags:
-    - larry
+    - cicd
+
 build:
   stage: build
-  image: docker:latest
-  when: always
+  image: docker:24.0.5
   services:
-    - name: docker:dind
+    - name: docker:24.0.5-dind
       alias: docker
+      command: ["--tls=false"]
   variables:
-    # Use the same TLS configuration as global
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
+    DOCKER_DRIVER: overlay2
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
@@ -39,9 +70,9 @@ build:
         git fetch && git checkout $TARGET_BRANCH && git pull;
       fi
     
-    # Wait for Docker daemon to be ready
+    # Wait for Docker daemon to be ready with more robust checking
     - echo "Waiting for Docker daemon..."
-    - until docker info; do sleep 1; done
+    - for i in $(seq 1 30); do docker info && break || sleep 2; done
     
     # Login to GitLab Container Registry using CI_JOB_TOKEN
     - echo "Logging into GitLab Container Registry..."
@@ -58,8 +89,8 @@ build:
     - echo "Building Docker image with commit hash $CI_COMMIT_SHA..."
     - DOCKER_DEFAULT_PLATFORM=linux/amd64 docker build -t $IMAGE_NAME:$CI_COMMIT_SHA -t $IMAGE_NAME:latest .
     
-    # Push to GitLab Package Registry
-    - echo "Pushing to GitLab Package Registry..."
+    # Push to GitLab Container Registry
+    - echo "Pushing to GitLab Container Registry..."
     - docker push $IMAGE_NAME:$CI_COMMIT_SHA
     - docker push $IMAGE_NAME:latest
     
@@ -72,4 +103,5 @@ build:
       fi
   tags:
     - cicd
-    
+  after_script:
+    - docker logout $CI_REGISTRY || true
