--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,21 @@
-
-workflow:
-  rules:
-    - if: '$CI_COMMIT_BRANCH'
+default:
+  tags:
+    - vps
 
 stages:
   - prepare
   - build
+
 prepare:
   stage: prepare
-  script:        
+  script:
     - echo "Configuring Git credentials..."
     - echo "https://${GIT_USERNAME}:${PERSONAL_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
     - echo "Prepare stage completed successfully"
-  tags:
-    - vps
+
 build:
   stage: build
   script:
     - echo "Try build"
     - sleep 10
     - echo "build done"
-  tags:
-    - vps
