--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,11 @@ stages:
 
 variables:
   TARGET_BRANCH: "CICD_2"
-  DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
-  DOCKER_HOST: tcp://docker:2375
+  # Docker configuration with TLS
+  DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_HOST: tcp://docker:2376
+  DOCKER_TLS_VERIFY: 1
+  DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
   
   # Package Registry configuration
   IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
@@ -47,8 +49,10 @@ build:
     - name: docker:20.10.16-dind
       alias: docker
   variables:
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_HOST: tcp://docker:2376
+    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_TLS_VERIFY: 1
+    DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
@@ -64,8 +68,10 @@ build:
     - echo "Cloning repository..."
     - git clone -b $TARGET_BRANCH "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" . || exit 1
     
-    # Wait for Docker daemon
-    - until docker info; do sleep 1; done
+    # Wait for Docker daemon to be ready
+    - echo "Waiting for Docker daemon..."
+    - for i in $(seq 1 30); do docker info >/dev/null 2>&1 && break || sleep 2; done
+    - docker info
     
     # Login to GitLab Container Registry
     - echo "Logging into GitLab Container Registry..."
