--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,8 +50,7 @@ build:
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    - apk add --no-cache git curl jq
-    # Configure Git authentication with personal token
+    # Configure Git authentication (Kaniko image already has git)
     - echo "Configuring Git authentication..."
     - git config --global credential.helper store
     - echo "https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
