--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
   IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
   
   # Git configuration
-  GIT_STRATEGY: none
+  GIT_STRATEGY: clone
   GIT_USERNAME: "fsa_HongTL"
 
 # Default configuration for all jobs
@@ -50,17 +50,6 @@ build:
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    # Configure Git authentication (Kaniko image already has git)
-    - echo "Configuring Git authentication..."
-    - git config --global credential.helper store
-    - echo "https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
-    - git config --global user.name "$GIT_USERNAME"
-    - git config --global user.email "$GIT_USERNAME@users.noreply.gitlab.com"
-    
-    # Clone the repository
-    - echo "Cloning repository..."
-    - git clone -b $TARGET_BRANCH "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" . || exit 1
-    
     # Setup Kaniko authentication for GitLab Container Registry
     - echo "Setting up Kaniko authentication..."
     - mkdir -p /kaniko/.docker
@@ -68,6 +57,8 @@ build:
   script:
     - echo "Building and pushing with Kaniko..."
     - echo "Building Docker image for $IMAGE_NAME"
+    - echo "Current directory contents:"
+    - ls -la
     - /kaniko/executor 
       --context $CI_PROJECT_DIR
       --dockerfile $CI_PROJECT_DIR/Dockerfile
