--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,13 @@ default:
 
 prepare:
   stage: prepare
-  image: ubuntu:20.04
+  image: 
+    name: alpine:latest
+    pull_policy: if-not-present
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   script:
-    - apt-get update && apt-get install -y git curl jq
+    - apk add --no-cache git curl jq
     # Configure Git authentication with personal token
     - echo "Configuring Git credentials..."
     - git config --global credential.helper store
@@ -42,11 +44,13 @@ prepare:
 
 build:
   stage: build
-  image: ubuntu:20.04
+  image: 
+    name: alpine:latest
+    pull_policy: if-not-present
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    - apt-get update && apt-get install -y git curl openssh-client tar gzip
+    - apk add --no-cache git curl openssh-client tar gzip
     # Configure Git authentication
     - echo "Configuring Git authentication..."
     - git config --global credential.helper store
@@ -98,11 +102,13 @@ build:
 
 deploy:
   stage: deploy
-  image: ubuntu:20.04
+  image: 
+    name: alpine:latest
+    pull_policy: if-not-present
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    - apt-get update && apt-get install -y openssh-client curl
+    - apk add --no-cache openssh-client curl
     - eval $(ssh-agent -s)
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
