--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,10 +59,12 @@ build:
     - git clone -b $TARGET_BRANCH "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" project_source || exit 1
     
     # Setup SSH for server connection
-    - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - eval $(ssh-agent -s)
+    - ssh-add ~/.ssh/id_rsa
     - ssh-keyscan vps.purintech.id.vn >> ~/.ssh/known_hosts
   script:
     - echo "Transferring source code to server..."
@@ -103,10 +105,12 @@ deploy:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
     - apk add --no-cache openssh-client curl
-    - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - eval $(ssh-agent -s)
+    - ssh-add ~/.ssh/id_rsa
     - ssh-keyscan vps.purintech.id.vn >> ~/.ssh/known_hosts
   script:
     - echo "Deploying application on server..."
