--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,11 @@ default:
 
 prepare:
   stage: prepare
-  image: node:18-alpine
+  image: mcr.microsoft.com/dotnet/sdk:8.0
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   script:
-    - apk add --no-cache git curl jq
+    - apt-get update && apt-get install -y git curl jq
     # Configure Git authentication with personal token
     - echo "Configuring Git credentials..."
     - git config --global credential.helper store
@@ -42,11 +42,11 @@ prepare:
 
 build:
   stage: build
-  image: node:18-alpine
+  image: mcr.microsoft.com/dotnet/sdk:8.0
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    - apk add --no-cache git curl openssh-client tar gzip
+    - apt-get update && apt-get install -y git curl openssh-client tar gzip
     # Configure Git authentication
     - echo "Configuring Git authentication..."
     - git config --global credential.helper store
@@ -100,11 +100,11 @@ build:
 
 deploy:
   stage: deploy
-  image: node:18-alpine
+  image: mcr.microsoft.com/dotnet/sdk:8.0
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    - apk add --no-cache openssh-client curl
+    - apt-get update && apt-get install -y openssh-client curl
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
@@ -112,23 +112,3 @@ deploy:
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa
     - ssh-keyscan vps.purintech.id.vn >> ~/.ssh/known_hosts
-  script:
-    - echo "Deploying application on server..."
-    - |
-      ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "
-        echo 'Stopping and removing old container...'
-        docker stop team03-webapi || true
-        docker rm team03-webapi || true
-        
-        echo 'Starting new container with latest image...'
-        docker run -d --name team03-webapi -p 8080:80 --restart unless-stopped $IMAGE_NAME:latest
-        
-        echo 'Checking deployment status...'
-        docker ps | grep team03-webapi
-        
-        echo 'Testing application endpoint...'
-        sleep 5
-        curl -f http://localhost:8080/health || echo 'Health check endpoint not available, but container is running'
-      "
-  tags:
-    - cicd
