--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,16 @@ stages:
 
 variables:
   TARGET_BRANCH: "CICD_2"
-  # Docker configurat  before_script:
-    - apt-get update && apt-get install -y openssh-client curl
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - eval $(ssh-agent -s)
-    - ssh-add ~/.ssh/id_rsa
-    - ssh-keyscan vps.purintech.id.vn >> ~/.ssh/known_hostsable TLS for simplicity
+  # Docker configuration - disable TLS for simplicity
   DOCKER_TLS_CERTDIR: ""
   DOCKER_HOST: tcp://docker:2375
+  
+  # Package Registry configuration
+  IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
+  
+  # Git configuration
+  GIT_STRATEGY: none
+  GIT_USERNAME: "fsa_HongTL"
   
   # Package Registry configuration
   IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
