--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,13 +62,18 @@ build:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     # Write SSH key with proper formatting
+    - echo "Debug - SSH_PRIVATE_KEY content:"
+    - echo "$SSH_PRIVATE_KEY" | head -2
+    - echo "$SSH_PRIVATE_KEY" | tail -2
     - |
-      cat > ~/.ssh/id_rsa << 'EOF'
-      $SSH_PRIVATE_KEY
-      EOF
+      echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
+    # Debug SSH key content
+    - echo "Debug - SSH key file content:"
+    - head -2 ~/.ssh/id_rsa
+    - tail -2 ~/.ssh/id_rsa
     # Verify SSH key format
-    - head -1 ~/.ssh/id_rsa | grep -q "BEGIN" || (echo "SSH key format error" && exit 1)
+    - head -1 ~/.ssh/id_rsa | grep -q "BEGIN" || (echo "SSH key format error - first line:" && head -1 ~/.ssh/id_rsa && exit 1)
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa || (echo "Failed to add SSH key" && exit 1)
     - ssh-keyscan -H vps.purintech.id.vn >> ~/.ssh/known_hosts
