--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,19 +61,20 @@ build:
     # Setup SSH for server connection
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    # Write SSH key with proper formatting
-    - echo "Debug - SSH_PRIVATE_KEY content:"
-    - echo "$SSH_PRIVATE_KEY" | head -2
-    - echo "$SSH_PRIVATE_KEY" | tail -2
-    - |
-      echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+    # Write SSH key with proper line breaks using printf
+    - echo "Creating SSH key file with proper format..."
+    - printf '%s\n' "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     # Debug SSH key content
-    - echo "Debug - SSH key file content:"
-    - head -2 ~/.ssh/id_rsa
-    - tail -2 ~/.ssh/id_rsa
+    - echo "Debug - SSH key file first 3 lines:"
+    - head -3 ~/.ssh/id_rsa
+    - echo "Debug - SSH key file last 3 lines:"
+    - tail -3 ~/.ssh/id_rsa
+    - echo "Debug - SSH key line count:"
+    - wc -l ~/.ssh/id_rsa
     # Verify SSH key format
     - head -1 ~/.ssh/id_rsa | grep -q "BEGIN" || (echo "SSH key format error - first line:" && head -1 ~/.ssh/id_rsa && exit 1)
+    - tail -1 ~/.ssh/id_rsa | grep -q "END" || (echo "SSH key format error - last line:" && tail -1 ~/.ssh/id_rsa && exit 1)
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa || (echo "Failed to add SSH key" && exit 1)
     - ssh-keyscan -H vps.purintech.id.vn >> ~/.ssh/known_hosts
@@ -118,14 +119,20 @@ deploy:
     - apt-get update && apt-get install -y openssh-client curl
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    # Write SSH key with proper formatting
-    - |
-      cat > ~/.ssh/id_rsa << 'EOF'
-      $SSH_PRIVATE_KEY
-      EOF
+    # Write SSH key with proper line breaks using printf
+    - echo "Creating SSH key file with proper format..."
+    - printf '%s\n' "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
+    # Debug SSH key content
+    - echo "Debug - SSH key file first 3 lines:"
+    - head -3 ~/.ssh/id_rsa
+    - echo "Debug - SSH key file last 3 lines:"
+    - tail -3 ~/.ssh/id_rsa
+    - echo "Debug - SSH key line count:"
+    - wc -l ~/.ssh/id_rsa
     # Verify SSH key format
-    - head -1 ~/.ssh/id_rsa | grep -q "BEGIN" || (echo "SSH key format error" && exit 1)
+    - head -1 ~/.ssh/id_rsa | grep -q "BEGIN" || (echo "SSH key format error - first line:" && head -1 ~/.ssh/id_rsa && exit 1)
+    - tail -1 ~/.ssh/id_rsa | grep -q "END" || (echo "SSH key format error - last line:" && tail -1 ~/.ssh/id_rsa && exit 1)
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa || (echo "Failed to add SSH key" && exit 1)
     - ssh-keyscan -H vps.purintech.id.vn >> ~/.ssh/known_hosts
