--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,13 @@ build:
     - tail -1 ~/.ssh/id_rsa | grep -q "END" || (echo "SSH key format error - last line:" && tail -1 ~/.ssh/id_rsa && exit 1)
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/id_rsa || (echo "Failed to add SSH key" && exit 1)
+    # Generate and show public key for comparison
+    - echo "Generating public key from private key:"
+    - ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
+    - echo "Public key content:"
+    - cat ~/.ssh/id_rsa.pub
+    - echo "SSH key fingerprint:"
+    - ssh-keygen -lf ~/.ssh/id_rsa.pub
     - ssh-keyscan -H vps.purintech.id.vn >> ~/.ssh/known_hosts
   script:
     - echo "Transferring source code to server..."
@@ -84,9 +91,10 @@ build:
     - tar -czf ../project.tar.gz .
     - cd ..
     - echo "Testing SSH connection..."
-    - ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "echo 'SSH connection successful'"
+    - echo "Debug SSH connection with verbose output:"
+    - ssh -vvv -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "echo 'SSH connection successful'" || echo "SSH key auth failed - need to check server authorized_keys"
     - echo "Copying project file to server..."
-    - scp project.tar.gz fsoftguy@vps.purintech.id.vn:/tmp/ || (echo "SCP failed" && exit 1)
+    - scp -v project.tar.gz fsoftguy@vps.purintech.id.vn:/tmp/ || (echo "SCP failed - ensure SSH public key is installed on server" && exit 1)
     
     - echo "Building Docker image on server..."
     - |
